--- a/admin/style.css
+++ b/admin/style.css
@@ -92,20 +92,25 @@ body {
 
 .dashboard {
   display: none;
+  margin: 20px 20px;
+  font-family: Arial, sans-serif;
+  border: 2px solid #ddd;
 }
 
 .dashboard p {
   line-height: 1.6;
 }
 
-.requests {
-  margin: 20px 20px;
+/* Backup Requests Menu */
+
+#backuprequests {
+  /* margin: 20px 20px;
   font-family: Arial, sans-serif;
-  border: 1px solid #ddd;
+  border: 1px solid #ddd; */
+  display: block;
 }
 
 .table-container {
-  width: 100%;
   overflow-x: auto;
   overflow-y: auto;
 }
@@ -113,7 +118,7 @@ body {
 table {
   width: 100%;
   border-collapse: collapse;
-  border: 1px solid #ddd;
+  /* border: 1px solid #ddd; */
 }
 
 .arrow-up::after {
@@ -125,7 +130,7 @@ table {
 }
 
 th, td {
-  padding: 12px;
+  padding: 15px 20px;
   text-align: left;
   border-bottom: 1px solid #ddd;
 }
@@ -153,4 +158,80 @@ th {
 
 .sort-icon.down {
   border-top: 6px solid #000;
+}
+
+/* Make Request Menu */
+
+#makerequest {
+  /* margin: 20px 20px;
+  font-family: Arial, sans-serif;
+  border: 1px solid #ddd; */
+}
+
+.form-container {
+  overflow-x: auto;
+  overflow-y: auto;
+  padding: 20px;
+}
+
+.form-container form {
+  display: block;
+  flex-direction: column;
+}
+
+.form-container label {
+  margin-bottom: 8px;
+  font-weight: bold;
+}
+
+.form-container select, .form-container textarea[type="text"] {
+  padding: 8px;
+  margin-bottom: 16px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 14px;
+}
+
+
+.form-container input[type="radio"] {
+  margin-right: 8px;
+}
+
+.form-container .date-selection, .form-container .repeat-selection {
+  opacity: 1;
+}
+
+.form-container .date-selection.disabled, .form-container .repeat-selection.disabled {
+  opacity: 0.5;
+  pointer-events: none;
+}
+
+.form-container input[type="date"] {
+  margin-right: 15px;
+}
+
+.form-container .submit-btn {
+  background-color: #ccc;
+  color: black;
+  border: 1px solid black;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  font-weight: bold;
+  border-radius: 5px;
+  cursor: pointer;
+  max-width: 150px;
+}
+
+.form-container .submit-btn:active {
+  background-color: darkgrey;
+}
+
+.periodicrequests {
+  font-size: large;
+  font-weight: bold;
+  padding: 10px 20px;
+  border-bottom: 2px solid #ddd;
 }
