--- a/public/style/admin.css
+++ b/public/style/admin.css
@@ -55,9 +55,9 @@ body {
   padding: 0;
 }
 
-.sidebar ul li {
-  /* margin: 0px 0px; */
-}
+/* .sidebar ul li {
+  margin: 0px 0px;
+} */
 
 .sidebar ul li a {
   text-decoration: none;
@@ -162,11 +162,11 @@ th {
 
 /* Make Request Menu */
 
-#makerequest {
-  /* margin: 20px 20px;
+/* #makerequest {
+  margin: 20px 20px;
   font-family: Arial, sans-serif;
-  border: 1px solid #ddd; */
-}
+  border: 1px solid #ddd;
+} */
 
 .form-container {
   overflow-x: auto;
