--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -240,3 +240,26 @@ th {
   padding: 10px 20px;
   border-bottom: 2px solid #ddd;
 }
+
+.popup-content {
+  background-color: #fefefe;
+  margin: 10% auto; /* 10% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* 80% of parent element */
+}
+
+/* Close button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
